test/typecheck/pass/scattered_enum.sail

scattered enum E

enum clause E = A
enum clause E = B
enum clause E = C
