test/typecheck/fail/scattered_union_rec.sail

scattered union U

enum E = A | B | C

union clause U = Ctor : E
